# w4732_final_project

./: .gitignore  LICENSE  README.md  generate_submission.py  generate_test_images.py  model_blender.py  predict.py  predict_stack.py  prepare_data.py  pyproject.toml  requirements.txt  train_model.py  train_stack.py
augmented_keypoints/: evaluate_fixed_keypoints.py  generate_fixed_keypoints.py  meta.json
augmented_keypoints/ann/: test_10.png.json  test_100.png.json  test_1000.png.json  test_1001.png.json  test_1002.png.json  test_1003.png.json  test_1004.png.json  test_1005.png.json  test_1006.png.json  test_1007.png.json  test_1008.png.json  test_1009.png.json  test_101.png.json  test_1010.png.json  (+833 more)
batch/: go_blender.cmd  go_data.cmd  go_predict_convnet.cmd  go_predict_inception.cmd  go_predict_inceptionv3.cmd  go_predict_kaggle1.cmd  go_predict_kaggle2.cmd  go_predict_lenet.cmd  go_predict_naimish.cmd  go_predict_resnet.cmd  go_predict_resnet50.cmd  go_predict_resnext101.cmd  go_predict_resnext50.cmd  go_predict_stack.cmd  go_prepare_data.cmd  go_stack.cmd  go_train_convnet.cmd  go_train_inception.cmd  go_train_inceptionv3.cmd  go_train_kaggle1.cmd  go_train_kaggle2.cmd  go_train_lenet.cmd  go_train_naimish.cmd  go_train_resnet.cmd  go_train_resnet50.cmd  go_train_resnext101.cmd  go_train_resnext50.cmd  go_train_stack.cmd
paper/: Facial Keypoints Detection.fdb_latexmk  Facial Keypoints Detection.fls  Facial Keypoints Detection.tex  compile.cmd  egbib.bib
pickle/: cleandata_naive_overlap.pkl
utils/: data_loader.py  data_transformer.py  model_zoo.py
(+13 files in other folders)
